:refactor: service: integrate mappers and repository interactions in PolicyServiceImpl